# ozanC-demo

./: .gitignore  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: c-cpp.yml
include/audit/: audit_logger.h
include/auth/: auth_manager.h
include/crypto/: crypto_utils.h
include/database/: db_handler.h
include/network/: http_server.h
include/utils/: file_utils.h  string_utils.h
src/: main.cpp
src/audit/: audit_logger.cpp
src/auth/: auth_manager.cpp
src/crypto/: crypto_utils.cpp
src/database/: db_handler.cpp
src/network/: http_server.cpp
src/utils/: file_utils.cpp  string_utils.cpp
tests/: test_main.cpp
